# projectC

./: .gitignore  CMakeLists.txt  Makefile  Makefile_bak  README.md  main.cpp  test.cpp  test.h
Cbase/funcPointDev/: funcPoint.c  funcPoint.h
Cbase/mmsetDev/: memsetTest.c  memsetTest.h
Cbase/test/: test.c  test.h
defineTest/: defineTest.cpp
dev_entern/: dev.cpp  dev.h
forkTest/: forkTest.cpp
funcPointer/: funcPointer.cpp  funcPointer.h  testFuncPointer.cpp
make/: Makefile  Makefile1  Makefile10  Makefile11  Makefile13  Makefile14  Makefile15  Makefile2  Makefile4  Makefile5  Makefile6  Makefile7  Makefile8  Makefile9  a.c  a.h  b.c  foo.c  foo.h  main.c
make/tmp/: foo.dep
