cmake_minimum_required(VERSION 3.15)
project(Study_c__)

set(CMAKE_CXX_STANDARD 14)

add_executable(Study_c__ main.cpp test.cpp test.h dev_entern/dev.cpp dev_entern/dev.h funcPointer/funcPointer.cpp funcPointer/testFuncPointer.cpp funcPointer/funcPointer.h defineTest/defineTest.cpp forkTest/forkTest.cpp Cbase/mmsetDev/memsetTest.c Cbase/mmsetDev/memsetTest.h Cbase/funcPointDev/funcPoint.c Cbase/funcPointDev/funcPoint.h)